renamed:    register.scss -> CSS/SCSS/register.scss 	renamed:    style.scss -> CSS/SCSS/style.scss 	renamed:    register.css -> CSS/register.css 	renamed:    register.css.map -> CSS/register.css.map 	renamed:    style.css -> CSS/style.css 	renamed:    style.css.map -> CSS/style.css.map 	renamed:    index.html -> HTML/index.html 	renamed:    info.html -> HTML/info.html 	renamed:    login.html -> HTML/login.html 	renamed:    news.html -> HTML/news.html 	renamed:    register.html -> HTML/register.html 	renamed:    register_script.js -> JS/register_script.js 	renamed:    script.js -> JS/script.js

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/htmx.org@1.9.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12/dist/gsap.min.js"></script>
-    <link href="style.css" rel="stylesheet">
+    <link href="../CSS/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <header>
             <div id="header-img-main"></div>
             <nav id="header-nav">
-                <a class="header-nav-button" id="header-nav-home" href="index.html">
+                <a class="header-nav-button" id="header-nav-home" href="./index.html">
                     <span>Home</span>
                     <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0%" y="-44" width="4.5%" height="44" />
@@ -46,7 +46,7 @@
                         <rect x="96%" y="-44" width="4.5%" height="44" />
                     </svg>
                 </a>
-                <a class="header-nav-button" id="header-nav-news" href="#" hx-get="news.html" hx-select=".main" hx-target="main">
+                <a class="header-nav-button" id="header-nav-news" href="#" hx-get="./news.html" hx-select=".main" hx-target="main">
                     <span>News</span>
                     <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0%" y="-44" width="4.5%" height="44" />
@@ -106,7 +106,7 @@
                         <rect x="96%" y="-44" width="4.5%" height="44" />
                     </svg>
                 </a> -->
-                <a class="header-nav-button" id="header-nav-info" href="#" hx-get="info.html" hx-select=".main" hx-target="main">
+                <a class="header-nav-button" id="header-nav-info" href="#" hx-get="./info.html" hx-select=".main" hx-target="main">
                     <span>Info</span>
                     <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0%" y="-44" width="4.5%" height="44" />
@@ -136,7 +136,7 @@
                         <rect x="96%" y="-44" width="4.5%" height="44" />
                     </svg>
                 </a>
-                <a class="header-nav-button" id="header-nav-register" href="register.html">
+                <a class="header-nav-button" id="header-nav-register" href="./register.html">
                     <span>Register</span>
                     <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0%" y="-44" width="4.5%" height="44" />
@@ -178,34 +178,34 @@
                 <div class="home-gallery-main">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="./assets/card1.png" alt="" width="100%"> 
+                            <img src="../assets/card1.png" alt="" width="100%"> 
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/card2.png" alt="" width="100%">
+                            <img src="../assets/card2.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/card3.png" alt="" width="100%">
+                            <img src="../assets/card3.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/card4.png" alt="" width="100%"> 
+                            <img src="../assets/card4.png" alt="" width="100%"> 
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/card5.png" alt="" width="100%">
+                            <img src="../assets/card5.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/card1.png" alt="" width="100%">
+                            <img src="../assets/card1.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/card2.png" alt="" width="100%"> 
+                            <img src="../assets/card2.png" alt="" width="100%"> 
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/card3.png" alt="" width="100%">
+                            <img src="../assets/card3.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/card4.png" alt="" width="100%">
+                            <img src="../assets/card4.png" alt="" width="100%">
                         </div>
                         <div class="swiper-slide">
-                            <img src="./assets/card5.png" alt="" width="100%"> 
+                            <img src="../assets/card5.png" alt="" width="100%"> 
                         </div>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
                             <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="./assets/mods.png" alt="" width="100%">
+                            <img src="../assets/mods.png" alt="" width="100%">
                         </div>
                     </div>
                     <div class="home-mods-part">
@@ -242,7 +242,7 @@
                             <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="./assets/mods.png" alt="" width="100%">
+                            <img src="../assets/mods.png" alt="" width="100%">
                         </div>
                     </div>
                     <div class="home-mods-part">
@@ -251,7 +251,7 @@
                             <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="./assets/mods.png" alt="" width="100%">
+                            <img src="../assets/mods.png" alt="" width="100%">
                         </div>
                     </div>
                     <div class="home-mods-part">
@@ -260,7 +260,7 @@
                             <input type="button" value="View more">
                         </div>
                         <div class="home-mods-part-img">
-                            <img src="./assets/mods.png" alt="" width="100%">
+                            <img src="../assets/mods.png" alt="" width="100%">
                         </div>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
         <footer>
             <nav>
                 <div class="footer-nav-logo">
-                    <img id="footer-logo" src="./assets/dc3dc0fba5a1476c8e0cd10c83b66247-free-Photoroom.png" alt="">
+                    <img id="footer-logo" src="../assets/dc3dc0fba5a1476c8e0cd10c83b66247-free-Photoroom.png" alt="">
                 </div>
                 <div class="footer-nav-contacts">
                     <ul id="footer-nav-contacts-ul">
@@ -300,6 +300,6 @@
                 </div>
             </nav>
         </footer>
-        <script src="script.js"></script>
+        <script src="../JS/script.js"></script>
 </body>
 </html>
