--- a/HTML/info.html
+++ b/HTML/info.html
@@ -4,7 +4,7 @@
     </section>
     <section id="info-text-main">
         <section class="info-text-contacts">
-            <img id="info-text-logo" src="./assets/dc3dc0fba5a1476c8e0cd10c83b66247-free-Photoroom.png" alt="">
+            <img id="info-text-logo" src="../assets/dc3dc0fba5a1476c8e0cd10c83b66247-free-Photoroom.png" alt="">
             <div class="info-text-contacts-part">
                 <div class="info-text-contacts-email">
                     <span>info@beamng.gmbh</span>
