--- a/HTML/news.html
+++ b/HTML/news.html
@@ -11,7 +11,7 @@
                     С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
             </div>
             <div class="news-part-img">
-                <img src="./assets/news.jpg" alt="">
+                <img src="../assets/news.jpg" alt="">
             </div>
             <div class="news-buttons">
                 <input type="button" value="View more">
@@ -25,7 +25,7 @@
                     С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
             </div>
             <div class="news-part-img">
-                <img src="./assets/news.jpg" alt="">
+                <img src="../assets/news.jpg" alt="">
             </div>
             <div class="news-buttons">
                 <input type="button" value="View more">
@@ -39,7 +39,7 @@
                     С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
             </div>
             <div class="news-part-img">
-                <img src="./assets/news.jpg" alt="">
+                <img src="../assets/news.jpg" alt="">
             </div>
             <div class="news-buttons">
                 <input type="button" value="View more">
@@ -53,7 +53,7 @@
                     С помощью модов можно создавать уникальные сценарии и экспериментировать с различными настройками, что делает игру еще более увлекательной и разнообразной. Кроме того, моды позволяют вносить изменения в уже существующие автомобили и карты, делая их более реалистичными и интересными.</p>
             </div>
             <div class="news-part-img">
-                <img src="./assets/news.jpg" alt="">
+                <img src="../assets/news.jpg" alt="">
             </div>
             <div class="news-buttons">
                 <input type="button" value="View more">
