--- a/HTML/register.html
+++ b/HTML/register.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preprocessor Page Login</title>
-    <link href="register.css" rel="stylesheet">
+    <title>Preprocessor Page Register</title>
+    <link href="../CSS/register.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
@@ -12,20 +12,23 @@
 <body>
         <main>
             <article class="reg-form-main">
-                <h1>Login</h1>
+                <h1>Register</h1>
+                <div class="reg-form-name">
+                    <input class="reg-form-input" type="text" placeholder="  Enter name"> 
+                </div>
                 <div class="reg-form-email">
                     <input class="reg-form-input" type="email" placeholder="  Enter email">
                 </div>
                 <div class="reg-form-password">
                     <input class="reg-form-input" type="password" placeholder="  Password">
                 </div>
-                <a class="reg-form-info" href="register.html">No account yet</a>
+                <a class="reg-form-info" href="./login.html">Already have an account</a>
                 <div class="reg-form-button">
-                    <input class="reg-form-button-main" type="button" value="Login">
-                    <a class="reg-form-back-home" href="index.html">Return to home</a>
+                    <input class="reg-form-button-main" type="button" value="Register">
+                    <a class="reg-form-back-home" href="./index.html">Return to home</a>
                 </div>
             </article>
         </main>
-        <script src="register_script.js"></script>
+        <script src="../JS/register_script.js"></script>
 </body>
 </html>
