modified:   HTML/login.html 	modified:   HTML/register.html 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <rect x="96%" y="-44" width="4.5%" height="44" />
                     </svg>
                 </a>
-                <a class="header-nav-button" id="header-nav-news" href="#" hx-get="./news.html" hx-select=".main" hx-target="main">
+                <a class="header-nav-button" id="header-nav-news" href="#" hx-get="./HTML/news.html" hx-select=".main" hx-target="main">
                     <span>News</span>
                     <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0%" y="-44" width="4.5%" height="44" />
@@ -106,7 +106,7 @@
                         <rect x="96%" y="-44" width="4.5%" height="44" />
                     </svg>
                 </a> -->
-                <a class="header-nav-button" id="header-nav-info" href="#" hx-get="./info.html" hx-select=".main" hx-target="main">
+                <a class="header-nav-button" id="header-nav-info" href="#" hx-get="./HTML/info.html" hx-select=".main" hx-target="main">
                     <span>Info</span>
                     <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0%" y="-44" width="4.5%" height="44" />
@@ -136,7 +136,7 @@
                         <rect x="96%" y="-44" width="4.5%" height="44" />
                     </svg>
                 </a>
-                <a class="header-nav-button" id="header-nav-register" href="./register.html">
+                <a class="header-nav-button" id="header-nav-register" href="./HTML/register.html">
                     <span>Register</span>
                     <svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0%" y="-44" width="4.5%" height="44" />
