--- a/HTML/login.html
+++ b/HTML/login.html
@@ -22,7 +22,7 @@
                 <a class="reg-form-info" href="./register.html">No account yet</a>
                 <div class="reg-form-button">
                     <input class="reg-form-button-main" type="button" value="Login">
-                    <a class="reg-form-back-home" href="./index.html">Return to home</a>
+                    <a class="reg-form-back-home" href="../index.html">Return to home</a>
                 </div>
             </article>
         </main>
