--- a/HTML/register.html
+++ b/HTML/register.html
@@ -25,7 +25,7 @@
                 <a class="reg-form-info" href="./login.html">Already have an account</a>
                 <div class="reg-form-button">
                     <input class="reg-form-button-main" type="button" value="Register">
-                    <a class="reg-form-back-home" href="./index.html">Return to home</a>
+                    <a class="reg-form-back-home" href="../index.html">Return to home</a>
                 </div>
             </article>
         </main>
